<?xml version="1.0"?>
<package format="2">
    <name>le_vins</name>
    <version>1.0.0</version>
    <description>The LE-VINS ROS Interface</description>

    <license>GPLv3</license>

    <maintainer email="thl@whu.edu.cn">hailiang</maintainer>
    <author email="thl@whu.edu.cn">hailiang</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>livox_ros_driver</depend>
    <depend>pcl_conversions</depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>

</package>
